--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
     "name": "react-app",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:5000",
     "dependencies": {
         "bootstrap": "^4.4.1",
+        "cors": "^2.8.5",
         "gh-pages": "^2.1.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
