--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
     "name": "react-app",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:5000",
     "dependencies": {
         "bootstrap": "^4.4.1",
         "cors": "^2.8.5",
@@ -34,5 +33,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "http-proxy-middleware": "^0.20.0"
     }
 }
