--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "my_daily_planner",
-  "version": "1.0.0",
-  "description": "a daily planner",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeot/my_daily_planner.git"
-  },
-  "author": "Shamim Keshani",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jeot/my_daily_planner/issues"
-  },
-  "homepage": "https://github.com/jeot/my_daily_planner#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+	"name": "my_daily_planner",
+	"version": "1.0.0",
+	"description": "a daily planner",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jeot/my_daily_planner.git"
+	},
+	"author": "Shamim Keshani",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jeot/my_daily_planner/issues"
+	},
+	"homepage": "https://github.com/jeot/my_daily_planner#readme",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	}
 }
