--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@auth0/auth0-spa-js": "^1.6.0",
         "bootstrap": "^4.4.1",
         "cors": "^2.8.5",
         "gh-pages": "^2.1.1",
