--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
         "react-scripts": "3.2.0",
         "react-spinners": "^0.6.1"
     },
-    "homepage": "http://shamimkeshani.ir",
+    "homepage": "http://localhost:5000",
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
