--- a/client/package.json
+++ b/client/package.json
@@ -1,43 +1,43 @@
 {
-    "name": "react-app",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@auth0/auth0-spa-js": "^1.6.0",
-        "bootstrap": "^4.4.1",
-        "cors": "^2.8.5",
-        "gh-pages": "^2.1.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "3.2.0",
-        "react-spinners": "^0.6.1"
-    },
-    "homepage": "http://localhost:5000",
-    "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "http-proxy-middleware": "^0.20.0"
-    }
+	"name": "react-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@auth0/auth0-spa-js": "^1.6.0",
+		"bootstrap": "^4.4.1",
+		"cors": "^2.8.5",
+		"gh-pages": "^2.1.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.2.0",
+		"react-spinners": "^0.6.1"
+	},
+	"homepage": "http://shamimkeshani.ir",
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"http-proxy-middleware": "^0.20.0"
+	}
 }
