--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "a daily planner",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js"
+		"devStart": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"repository": {
 		"type": "git",
